<resources>
    <string name="app_name">Babylonia</string>
    <string name="following_button">Following</string>
    <string name="followers_button">Followers</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="rankings_promotion_condition">Only the top 10 advance to the next rank</string>
    <string name="change_avatar_button">Change Avatar</string>
    <string name="settings_name_subtitle">Name</string>
    <string name="settings_username_subtitle">User Name</string>
    <string name="settings_email_subtitle">Email</string>
    <string name="settings_change_password_button">Change Password</string>
    <string name="settings_logout_button">Logout</string>
    <string name="settings_general_title">General</string>
    <string name="settings_sound_effects_subtitle">Sound Effects</string>
    <string name="settigns_motivational_message_subtitle">Motivational Message</string>
    <string name="settings_accessibility_title">Accessibility</string>
    <string name="settings_speaking_exercises_subtitle">Speaking Exercises</string>
    <string name="settings_listening_exercises_subtitle">Listening Exercises</string>
    <string name="settings_notification_title">Notification</string>
    <string name="settings_lesson_reminder_subtitle">Lesson Reminder</string>
    <string name="settings_your_profile_title">Your Profile</string>
    <string name="lesson_check_button">Check</string>
    <string name="lesson_translate_command">Please translate this sentence</string>
    <string name="lesson_choice_command">Please select the correct Answer</string>
    <string name="lesson_speech_command">Please Press the button and verbally translate</string>
    <string name="lesson_start_listening_button">Start Listening</string>
    <string name="lesson_hearing_command">Please translate what you hear</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Sign in</string>
    <string name="register_email_hint">Email</string>
    <string name="register_button">Register</string>
    <string name="login_register_button">Don\'t have an account?</string>
    <string name="register_login_button">Already have an account?</string>
    <string name="lesson_pairs_command">Please select the matching pairs</string>
    <string name="loading_fragment_text">Loading...</string>
    <string name="profile_topbar_title">Profile</string>
    <string name="profile_courses_title">Courses</string>
    <string name="change_password_textedit_hint">New Password</string>
    <string name="change_password_apply_button">Change</string>
    <string name="change_password_cancel_button">Cancel</string>
    <string name="current_password_textedit_hint">Current Password</string>
</resources>