<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:viewBindingIgnore="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_email_textedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"
        android:textColor="@color/gold"
        android:layout_marginTop="150dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_password_textedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:textColor="@color/gold"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@id/login_email_textedit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:textColor="@color/gold"
        android:text="@string/login_register_button"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/login_password_textedit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/login_button"
        android:textSize="@dimen/user_name"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>